--- a/TIA_Add_In_ToolPlus/TIA_Add_In_ToolPlus.csproj
+++ b/TIA_Add_In_ToolPlus/TIA_Add_In_ToolPlus.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.17.0.1655723949\build\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.props" Condition="Exists('..\packages\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.17.0.1655723949\build\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -33,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Siemens.Engineering.AddIn">
+      <HintPath>..\..\V17.AddIn\Siemens.Engineering.AddIn.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
@@ -42,11 +46,28 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TIA_Add_In_Helper">
+      <HintPath>..\..\TIA_Add_In_Helper\TIA_Add_In_Helper\bin\Release\TIA_Add_In_Helper.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddInProvider.cs" />
+    <Content Include="AddInPublisherConfiguration.xml" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="AddIn.cs" />
+    <Compile Include="AddInProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.17.0.1655723949\build\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.17.0.1655723949\build\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.props'))" />
+    <Error Condition="!Exists('..\packages\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.17.0.1655723949\build\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.17.0.1655723949\build\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.targets'))" />
+  </Target>
+  <Import Project="..\packages\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.17.0.1655723949\build\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.targets" Condition="Exists('..\packages\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.17.0.1655723949\build\Siemens.Collaboration.Net.TiaPortal.AddIn.Build.targets')" />
 </Project>
